// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App playground 1`] = `
<App>
  <div
    className="container"
  >
    <LocalizationProvider
      localeCode="en"
    >
      <nav
        className="appbar"
      >
        <h2>
          Flap.js
        </h2>
        <p>
          <LocaleString
            entity="hi"
            params={Array []}
          >
            hi
          </LocaleString>
        </p>
        <button
          onClick={[Function]}
        />
      </nav>
      <div
        className="appcontent"
      >
        <WorkspaceLayout
          renderBackground={[Function]}
        >
          <section
            className="container "
          >
            <div
              className="foreground"
            >
              <SideBarLayout
                renderSideBar={[Function]}
                side="right"
              >
                <div
                  className="container "
                  style={
                    Object {
                      "flexDirection": "row-reverse",
                    }
                  }
                >
                  <div
                    className="sidebar right"
                  >
                    <div
                      className="sidetab"
                    >
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                      <div
                        className="divider"
                      />
                      <button
                        className="tab"
                        onClick={[Function]}
                      >
                        <ForwardRef
                          className="icon"
                          color="#FFFFFF"
                        >
                          <span
                            className="icon"
                            color="#FFFFFF"
                          />
                        </ForwardRef>
                      </button>
                    </div>
                  </div>
                  <div
                    className="viewport"
                  >
                    <DrawerLayout
                      open={false}
                      renderDrawer={[Function]}
                      side="right"
                    >
                      <div
                        className="container"
                        style={
                          Object {
                            "flexDirection": "row-reverse",
                          }
                        }
                      >
                        <div
                          className="drawer  right"
                          style={
                            Object {
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="handle"
                            onMouseDown={[Function]}
                            role="presentation"
                          />
                          <div
                            className="content"
                          >
                            <div
                              style={
                                Object {
                                  "height": "100%",
                                  "width": "100%",
                                }
                              }
                            >
                              I am content
                            </div>
                          </div>
                        </div>
                        <div
                          className="viewport"
                        >
                          <div
                            style={
                              Object {
                                "background": "white",
                                "height": "100%",
                                "width": "100%",
                              }
                            }
                          >
                            I am content
                          </div>
                        </div>
                      </div>
                    </DrawerLayout>
                  </div>
                </div>
              </SideBarLayout>
            </div>
            <div
              className="background"
            >
              <div
                style={
                  Object {
                    "background": "dodgerblue",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              />
            </div>
          </section>
        </WorkspaceLayout>
      </div>
    </LocalizationProvider>
  </div>
</App>
`;

exports[`Storyshots DrawerLayout playground 1`] = `
<DrawerLayout
  open={true}
  side="left"
>
  <div
    className="container"
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <div
      className="drawer  left open"
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <div
        className="handle"
        onMouseDown={[Function]}
        role="presentation"
      />
      <div
        className="content"
      />
    </div>
    <div
      className="viewport"
    />
  </div>
</DrawerLayout>
`;

exports[`Storyshots HelloWorld custom style 1`] = `
<HelloWorld
  style={
    Object {
      "backgroundColor": "pink",
      "border": "5px dotted limegreen",
    }
  }
  title="custom style"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title"
      style={
        Object {
          "backgroundColor": "pink",
          "border": "5px dotted limegreen",
        }
      }
    >
      Hello 
      custom style
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots HelloWorld playground 1`] = `
<HelloWorld
  title="World!"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title"
    >
      Hello 
      World!
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots HelloWorld with rainbow 1`] = `
<HelloWorld
  rainbow={true}
  title="World!"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title rainbow "
    >
      Hello 
      World!
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots HelloWorld with title 1`] = `
<HelloWorld
  title="home"
>
  <button
    className="helloWorld"
    onClick={[Function]}
  >
    <h1
      className="title"
    >
      Hello 
      home
    </h1>
  </button>
</HelloWorld>
`;

exports[`Storyshots SideBarLayout playground 1`] = `
<SideBarLayout
  side="left"
>
  <div
    className="container "
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <div
      className="sidebar left"
    />
    <div
      className="viewport"
    />
  </div>
</SideBarLayout>
`;

exports[`Storyshots WorkspaceLayout playground 1`] = `
<WorkspaceLayout>
  <section
    className="container "
  >
    <div
      className="foreground"
    />
    <div
      className="background"
    />
  </section>
</WorkspaceLayout>
`;
